# cmaketest

Test1/: CMakeLists.txt
Test1/MyLib/: CMakeLists.txt
Test1/MyLib/src/: Student.cpp
Test1/MyMain/: CMakeLists.txt
Test1/MyMain/src/: Test.cpp
